updated admin to HSO module

--- a/HSO Module/aboutAdmin.html
+++ b/HSO Module/aboutAdmin.html
@@ -36,23 +36,15 @@
             </div>
 
             <ul class="list-unstyled components">
-                <p id="mainmenu">Main Menu</p>
+                <h3 id="mainmenu">Main Menu</h3>
                 <li>
                     <a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 </li>
                 <li>
-                    <a href="ManageVaccineHome.php"><i class="fas fa-syringe"></i> Manage Vaccine</a>
+                    <a href="ManageVaccineHome.php" ><i class="fas fa-syringe"></i> Manage Vaccine</a>
                 </li>
                 <li>
-                    <a href="#ManageUsersSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-users"></i> Manage Users</a>
-                    <ul class="collapse list-unstyled" id="ManageUsersSubmenu">
-                        <li>
-                            <a href="ManagePersonnelHome.php">Personnel</a>
-                        </li>
-                        <li>
-                            <a href="ManagePatientHome.php">Patients</a>
-                        </li>
-                    </ul>
+                    <a href="ManagePatientHome.php"><i class="fas fa-user-circle"></i> Manage Patients</a>
                 </li>
                 <li>
                     <a href="ManageDeployment.php"><i class="fas fa-truck"></i> Manage Deployment</a>
