Adjustments on UI components

--- a/HSO Module/aboutAdmin.html
+++ b/HSO Module/aboutAdmin.html
@@ -36,7 +36,11 @@
             </div>
 
             <ul class="list-unstyled components">
-                <h3 id="mainmenu">Main Menu</h3>
+                <h4 id="headingNav1"> Health Service Office </h4>
+                <hr>
+                <h5 id="headingNav2"> September 17, 2021 | 01:24 PM</h5>
+                <hr>
+
                 <li>
                     <a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 </li>
@@ -87,12 +91,6 @@
 
             <!-- Page Content  -->
             <!-- Search Container-->
-            <div class="search-container">
-                <form action="/action_page.php">
-                    <input type="text" placeholder="Search" name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-            </div>
 
             <h5 style="text-align: justify;">SMIT+ started as an idea for a group of students as a requirement for their IT Project. Considering the circumstance the members opted for a project idea that will help the government in fighting the pandemic situation. As the Department of
                 Health transition to the next phase of fighting COVID-19, the group goes along with it and came up with Monitoring, Tracking the Vaccination Process and stocks. <br> <br>Baguio City is the chosen case study place and as the project progresses
