--- a/HSO Module/aboutAdmin.html
+++ b/HSO Module/aboutAdmin.html
@@ -10,6 +10,7 @@
     <title>SMIT+ | About</title>
 
     <!-- Our Custom CSS -->
+    <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
     <link href="../css/style.css" rel="stylesheet">
     <!-- <link href="../css/cssAdmin.css" rel="stylesheet"> -->
 
