--- a/HSO Module/aboutAdmin.html
+++ b/HSO Module/aboutAdmin.html
@@ -32,11 +32,12 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-brand-icon">
-                    <img style="width:150px;" src="../../img/SMIT+.png" alt="Baguio Logo">
+                    <img src="../img/logoo.png" style="width: 104%; margin-bottom:-19%; margin-top:-5%;" alt="Baguio Logo">
                 </div>
             </div>
 
             <ul class="list-unstyled components">
+                <hr>
                 <h4 id="headingNav1"> Health Service Office </h4>
                 <hr>
                 <h5 id="headingNav2"> September 17, 2021 | 01:24 PM</h5>
@@ -72,18 +73,6 @@
         <!-- Top Nav Bar  -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light upperBoxOG">
-                <div class="container-fluid upperBox">
-
-                    <button class="btnTop">
-                    <i class="fas fa-bell"></i>
-                </button>
-
-                    <button class="btnTop btnBell">
-                    <i class="fas fa-cog"></i>
-                </button>
-                </div>
-            </nav>
 
             <!-- Page Content  -->
             <!-- Search Container-->
