--- a/HSO Module/aboutAdmin.html
+++ b/HSO Module/aboutAdmin.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Title -->
-    <title>SMIT+ | About</title>
+    <title>HSO | About</title>
 
     <!-- Our Custom CSS -->
     <link rel="icon" href="../img/FaviSMIT+.png" type="image/jpg">
