--- a/HSO Module/aboutAdmin.html
+++ b/HSO Module/aboutAdmin.html
@@ -44,7 +44,7 @@
                 <hr>
 
                 <li>
-                    <a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+                    <a href="HSOdash.php"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 </li>
                 <li>
                     <a href="ManageVaccineHome.php" ><i class="fas fa-syringe"></i> Manage Vaccine</a>
