mayor view user table scroll fix & minimal adjustment on about

--- a/HSO Module/aboutAdmin.html
+++ b/HSO Module/aboutAdmin.html
@@ -73,21 +73,24 @@
         <!-- Top Nav Bar  -->
         <div id="content">
 
-
             <!-- Page Content  -->
             <!-- Search Container-->
-
-            <h5 style="text-align: justify;">SMIT+ started as an idea for a group of students as a requirement for their IT Project. Considering the circumstance the members opted for a project idea that will help the government in fighting the pandemic situation. As the Department of
+            <div style="background-color: #ffffff; border-radius: 5px" class="rounded p-2">
+            <div class="m-4">
+                <h2>About Us</h2>
+            <h5 class='ml-3'style="text-align: justify;">SMIT+ started as an idea for a group of students as a requirement for their IT Project. Considering the circumstance the members opted for a project idea that will help the government in fighting the pandemic situation. As the Department of
                 Health transition to the next phase of fighting COVID-19, the group goes along with it and came up with Monitoring, Tracking the Vaccination Process and stocks. <br> <br>Baguio City is the chosen case study place and as the project progresses
                 it will be presented to other LGU. Aiming to fight and Stop this pandemic through technology.
             </h5>
-            <hr>
-            <h4>Developed by:</h4>
-            <img src="../img/SMIT+.png" alt="" style="width: 40%;">
-
-            <h4>Managed by:</h4>
-            <img src="../img/city-of-baguio-seal_orig.png" alt="" style="width: 20%;">
-
+            </div>
+            <br>
+            <div class="m-4 mt-1">
+            <h5>Developed by:</h5>
+            <img src="../img/SMIT+.png" alt="" class='ml-3' style="width: 20%; height: auto">
+            <h5 class="mt-2">Managed by:</h5>
+            <img src="../img/city-of-baguio-seal_orig.png" class='ml-3' alt="" style="width: 15%; height: auto">
+            </div>
+            </div>
         </div>
         <script type="text/javascript">
             $(document).ready(function() {
